# gecko-home-assistant

./: .devcontainer.json  .devcontainer.linux.json  .gitignore  LICENSE  README.md  hacs.json  info.md  local-devcontainer.json  requirements.txt  setup.cfg
.devcontainer/: configuration.yaml  devcontainer.json  local-devcontainer.json
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: combined.yaml  lint.yml  misc.yaml  release.yml  validate.yml
config/: configuration.yaml
custom_components/gecko/: __init__.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  datablock.py  date.py  entity.py  fan.py  light.py  manifest.json  number.py  select.py  sensor.py  spa_manager.py  switch.py  water_heater.py
custom_components/gecko/translations/: en.json  fr.json
scripts/: develop
